# TDD_com_python

./: README.md  notas.md  pyproject.toml
.github/workflows/: python-app.yml
python_tdd/: classifica_idade.py  funcoes.py
tests/assincrono/: fetch_data.py  test_fetch_data.py
tests/excecoes/: test_divisao.py  test_verifica_idade.py
tests/fixtures/atividade/: test_atividade.py  test_class.py
tests/fixtures/escopo/: test_fixtures_escopo.py
tests/fixtures/exemplos_1/: test_basic.py  test_mock.py
tests/fixtures/setup_e_teardown/: test_teardown.py
tests/integracao/: app.py  test_integracao.py
tests/marcadores/: test_operacoes.py
tests/marcadores/atividades/: test_atividade_markers.py
tests/marcadores/multiplos_marcadores/: test_variados.py
tests/marcadores/test_marcadores_basico/: pytest.ini
tests/parametrizados/atividades/: test_fatorial.py
tests/parametrizados/classificacao/: test_classifica_idade.py
tests/parametrizados/multiplos_parametros/: test_cacula_total.py
tests/parametrizados/simples/: test_soma.py
tests/performance/: my_code.py  test_performance.py
tests/plugins/1_plugins/: test_basic_1.py  test_basic_3.py
tests/projeto_final/: database_manager.py  rodarexemplo.py  test_projeto_final.py  users.db
tests/test_intro/: test_basico.py
tests/testes_estruturais/: test_estruturais.py
