[tool.poetry]
name = "python-tdd"
version = "0.1.0"
description = ""
authors = ["davidade300 <iaderinho@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
pytest-cov = "^6.0.0"
pytest-html = "^4.1.1"
pytest-asyncio = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = ["lento", "rapido", "crianca", "adolescente", "adulto", "idoso"]
